feat(tools): scripts and generator updates to enable SWC transpilation for v9 packages (#26527)
* chore: add swc/cli as dev dep

* feat(migrate-converged-pkg): implement setup to add swcrc config file

* feat(scripts): add swc.ts file which runs SWC CLI

* feat(scripts): add just-script preset build:react-components to be used by v9 packages to transpile based on browser matrix

* feat(migrate-converged-pkg): setup just config file to map just-scripts build to new build:react-components task

* test(migrate-converged-pkg): add test cases for added behaviors

* fix: deduplicate graceful-fs

* fix: deduplicate semver

* fix(migrate-converged-pkg): add justConfig to projectConfig paths

* feat: simplify v9 compilation flow with swc

* fixup! feat: simplify v9 compilation flow with swc

* fixup! fixup! feat: simplify v9 compilation flow with swc

* chore: update yarn.lock

* nit: remove unintended prettier changes

* fix: use babel-plugin-module-resolver version 4.1.0 which works with node 14 and above

* chore: manually dedupe resolve package

* chore: add .swcrc to files v-build owns

* chore: cleanup just preset.ts of unused code

* chore: cleanup commented out code

* chore: update yarn.lock after master merge

* feat: add monorepo root .babelrc-v9.json file and update migrate-converged-pkg generator to EXTEND that file within each respective v9 babelrc.json file

* chore: update yarn.lock

* fix(migrate-converged-generator): add react useBuiltIns config to swcrc to reduce bundle size

* test(migrate-converged): update test

* chore: add bugfixes: true to swcrc file to suppress bundle size increase caused by rest parameters being buggy in safari

* nit: remove ecma target from swcrc since it does nothing, browserlist targets always take precedence

* nit: use optional chaining instead of bang operator for just config task

* chore: add runtime:classic to swcrc

* test: update test to reflect swcrc addition

*

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -292,3 +292,4 @@ packages/react-experiments/src/components/TileList @ThomasMichon
 **/cypress.config.ts @microsoft/fluentui-react-build
 **/api-extractor.json @microsoft/fluentui-react-build
 **/api-extractor.unstable.json @microsoft/fluentui-react-build
+**/.swcrc @microsoft/fluentui-react-build
