--- a/packages/react-components/react-tree/tsconfig.json
+++ b/packages/react-components/react-tree/tsconfig.json
@@ -19,6 +19,9 @@
       "path": "./tsconfig.spec.json"
     },
     {
+      "path": "./tsconfig.cy.json"
+    },
+    {
       "path": "./.storybook/tsconfig.json"
     }
   ]
