Virtualizer: Static scroll hooks and embedded scrollview (#26985)
* Initial static size measurement

* Fix up algo to ensure algo is unidirectional when scroll is

* Add scroll container and implement built in hooks

* Fix up container and scroll refs

* Fix up virtualizer length updates to ensure they always propogate

* Add new functionality and hooks

* Tidy up types and add change files

* Add fluent/react package as dev dep for demos

* Fix up key indexing on multi-unbounded demo

* Add fluentui/react as dep

* Ensure resize observer is only enabled once mounted (SSR tests)

* Touch up PR comments

* Add ref callback and touch up PR comments

* Remove block

* Test render cycles

* Add PR comments

* Rebase and touch up

* Update package dep

* Fix up undefined ref

* Fix up API

* Fix up example type

* Update api

* Add document.body call

* Fix up ref callback to be an actual callback func

* Update api

* PR Comments and update version

* Remove I notation from types

* Fix up virtualizer length

* Remove dynamic type file

* Ensure resize observer disconnects on unload

* Remove unused ref in horizontal example

* Add PR comments

* Update package deps

--- a/packages/react-components/react-virtualizer/package.json
+++ b/packages/react-components/react-virtualizer/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@fluentui/react-utilities": "^9.7.2",
+    "@fluentui/react": "^8.106.8",
     "@griffel/react": "^1.5.2",
     "@swc/helpers": "^0.4.14"
   },
