feat(scripts-babel): implement v9 babel preset to properly resolve griffel module mappings (#27313)

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -52,6 +52,7 @@
 /yarn.lock @microsoft/fluentui-react-build
 /*.config.js @microsoft/fluentui-react-build
 /typings @microsoft/fluentui-react-build
+/.babelrc-v9.json @microsoft/fluentui-react-build
 
 #### NX related files
 /nx.json @microsoft/fluentui-react-build
