ci: update codeowenrs file for v-build (#27430)

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -35,24 +35,31 @@
 /.githooks @microsoft/fluentui-react-build
 /.storybook @microsoft/fluentui-react-build
 /.vscode @microsoft/fluentui-react-build
+/.yarn @microsoft/fluentui-react-build
 /tools @microsoft/fluentui-react-build
+/typings @microsoft/fluentui-react-build
 
 #### Root Build files
 /.eslintrc.* @microsoft/fluentui-react-build
+/.yarnrc @microsoft/fluentui-react-build
 /.gitattributes @microsoft/fluentui-react-build
 /.gitignore @microsoft/fluentui-react-build
 /.npmrc @microsoft/fluentui-react-build
 /.npmignore @microsoft/fluentui-react-build
+/.prettierignore @microsoft/fluentui-react-build
+/.nxignore @microsoft/fluentui-react-build
 /jest.preset.js @microsoft/fluentui-react-build
 /lerna.json @microsoft/fluentui-react-build
 /package.json @microsoft/fluentui-react-build
 /sizeauditor.json @microsoft/fluentui-react-build
 /tsconfig.json @microsoft/fluentui-react-build
+/tsconfig.*.json @microsoft/fluentui-react-build
 /tsconfig.base.json @microsoft/fluentui-react-build
 /yarn.lock @microsoft/fluentui-react-build
 /*.config.js @microsoft/fluentui-react-build
-/typings @microsoft/fluentui-react-build
 /.babelrc-v9.json @microsoft/fluentui-react-build
+/*.js @microsoft/fluentui-react-build
+/*.json @microsoft/fluentui-react-build
 
 #### NX related files
 /nx.json @microsoft/fluentui-react-build
