chore: remove obsolete configs and decouple type-check from bundling in v0 `perf` app (#26421)
* chore(scripts): remove obsolete configs and fix webpack perf tsconfig path

* refactor(fluentui/perf): dont pollute nodejs global scope

* chore(fluentui/perf): move tsc check to separat task to speed bundling

--- a/packages/fluentui/perf/tsconfig.json
+++ b/packages/fluentui/perf/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../../tsconfig.base.v0.json",
   "compilerOptions": {
+    "noEmit": true,
     "module": "esnext",
     "types": ["node", "webpack-env"]
   },
