--- a/tsconfig.base.v0.json
+++ b/tsconfig.base.v0.json
@@ -15,6 +15,7 @@
     "strictNullChecks": false,
     "noUnusedLocals": true,
     "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
     "typeRoots": ["node_modules/@types", "./typings"],
     "baseUrl": ".",
     "paths": {
