--- a/packages/fluentui/perf/package.json
+++ b/packages/fluentui/perf/package.json
@@ -23,6 +23,7 @@
     "perf:test": "cross-env PERF=true gulp perf --times=100",
     "perf:test:debug": "cross-env PERF=true gulp perf:debug --debug",
     "lint": "eslint --ext .js,.ts,.tsx .",
-    "lint:fix": "yarn lint --fix"
+    "lint:fix": "yarn lint --fix",
+    "type-check": "tsc -p ."
   }
 }
