--- a/packages/react-components/react-components/package.json
+++ b/packages/react-components/react-components/package.json
@@ -41,7 +41,7 @@
     "@fluentui/react-combobox": "^9.2.7",
     "@fluentui/react-dialog": "^9.4.3",
     "@fluentui/react-divider": "^9.2.7",
-    "@fluentui/react-field": "9.0.0-alpha.29",
+    "@fluentui/react-field": "9.0.0-beta.0",
     "@fluentui/react-image": "^9.1.4",
     "@fluentui/react-infobutton": "9.0.0-beta.25",
     "@fluentui/react-input": "^9.4.7",
