--- a/packages/react-components/react-datepicker-compat/package.json
+++ b/packages/react-components/react-datepicker-compat/package.json
@@ -38,7 +38,7 @@
     "@fluentui/react-theme": "^9.1.7",
     "@fluentui/react-utilities": "^9.7.3",
     "@fluentui/keyboard-keys": "^9.0.2",
-    "@fluentui/react-field": "9.0.0-alpha.29",
+    "@fluentui/react-field": "9.0.0-beta.0",
     "@fluentui/react-icons": "^2.0.196",
     "@fluentui/react-shared-contexts": "^9.3.3",
     "@fluentui/react-tabster": "^9.6.3",
