--- a/packages/react-components/react-progress/package.json
+++ b/packages/react-components/react-progress/package.json
@@ -32,7 +32,7 @@
     "@fluentui/scripts-tasks": "*"
   },
   "dependencies": {
-    "@fluentui/react-field": "9.0.0-alpha.29",
+    "@fluentui/react-field": "9.0.0-beta.0",
     "@fluentui/react-shared-contexts": "^9.3.3",
     "@fluentui/react-theme": "^9.1.7",
     "@fluentui/react-utilities": "^9.7.3",
