--- a/packages/react-components/react-radio/package.json
+++ b/packages/react-components/react-radio/package.json
@@ -33,7 +33,7 @@
   },
   "dependencies": {
     "@fluentui/react-context-selector": "^9.1.16",
-    "@fluentui/react-field": "9.0.0-alpha.29",
+    "@fluentui/react-field": "9.0.0-beta.0",
     "@fluentui/react-icons": "^2.0.196",
     "@fluentui/react-label": "^9.1.7",
     "@fluentui/react-shared-contexts": "^9.3.3",
