--- a/packages/react-components/react-slider/package.json
+++ b/packages/react-components/react-slider/package.json
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "@griffel/react": "^1.5.2",
-    "@fluentui/react-field": "9.0.0-alpha.29",
+    "@fluentui/react-field": "9.0.0-beta.0",
     "@fluentui/react-shared-contexts": "^9.3.3",
     "@fluentui/react-tabster": "^9.6.3",
     "@fluentui/react-theme": "^9.1.7",
