--- a/packages/react-components/react-spinbutton/package.json
+++ b/packages/react-components/react-spinbutton/package.json
@@ -35,7 +35,7 @@
   "dependencies": {
     "@griffel/react": "^1.5.2",
     "@fluentui/keyboard-keys": "^9.0.2",
-    "@fluentui/react-field": "9.0.0-alpha.29",
+    "@fluentui/react-field": "9.0.0-beta.0",
     "@fluentui/react-icons": "^2.0.196",
     "@fluentui/react-shared-contexts": "^9.3.3",
     "@fluentui/react-theme": "^9.1.7",
