--- a/apps/public-docsite-v9/package.json
+++ b/apps/public-docsite-v9/package.json
@@ -22,7 +22,7 @@
     "@fluentui/scripts-tasks": "*"
   },
   "dependencies": {
-    "@fluentui/react-datepicker-compat": "0.0.0-alpha.0",
+    "@fluentui/react-datepicker-compat": "0.0.0-beta.0",
     "@fluentui/react-migration-v8-v9": "^9.2.7",
     "@fluentui/react-migration-v0-v9": "9.0.0-alpha.0",
     "@fluentui/react": "^8.107.4",
