--- a/packages/react-components/react-datepicker-compat/package.json
+++ b/packages/react-components/react-datepicker-compat/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@fluentui/react-datepicker-compat",
-  "version": "0.0.0-alpha.0",
-  "private": true,
+  "version": "0.0.0-beta.0",
   "description": "React components for building web experiences",
   "main": "lib-commonjs/index.js",
   "module": "lib/index.js",
