fix: add "style" to exports field (#27274)

--- a/packages/react-components/react-theme-sass/package.json
+++ b/packages/react-components/react-theme-sass/package.json
@@ -40,6 +40,7 @@
   },
   "exports": {
     ".": {
+      "style": "./sass/tokens.scss",
       "types": "./dist/index.d.ts",
       "node": "./lib-commonjs/index.js",
       "import": "./lib/index.js",
