--- a/packages/react-components/react-jsx-runtime/package.json
+++ b/packages/react-components/react-jsx-runtime/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@fluentui/react-jsx-runtime",
   "version": "9.0.0-alpha.0",
-  "private": true,
   "description": "React components for building web experiences",
   "main": "lib-commonjs/index.js",
   "module": "lib/index.js",
@@ -30,6 +29,7 @@
     "@fluentui/scripts-tasks": "*"
   },
   "dependencies": {
+    "@fluentui/react-utilities": "^9.7.4",
     "@swc/helpers": "^0.4.14"
   },
   "peerDependencies": {
