--- a/packages/react-components/react-drawer/package.json
+++ b/packages/react-components/react-drawer/package.json
@@ -35,6 +35,7 @@
     "@fluentui/scripts-cypress": "*"
   },
   "dependencies": {
+    "@fluentui/react-dialog": "^9.5.1",
     "@fluentui/react-theme": "^9.1.7",
     "@fluentui/react-utilities": "^9.7.4",
     "@griffel/react": "^1.5.2",
