--- a/packages/react-components/react-combobox/package.json
+++ b/packages/react-components/react-combobox/package.json
@@ -34,7 +34,7 @@
   "dependencies": {
     "@fluentui/keyboard-keys": "^9.0.2",
     "@fluentui/react-context-selector": "^9.1.17",
-    "@fluentui/react-field": "9.0.0-beta.2",
+    "@fluentui/react-field": "9.0.0",
     "@fluentui/react-icons": "^2.0.196",
     "@fluentui/react-portal": "^9.2.5",
     "@fluentui/react-positioning": "^9.5.9",
