--- a/packages/react-components/react-components/package.json
+++ b/packages/react-components/react-components/package.json
@@ -41,7 +41,7 @@
     "@fluentui/react-combobox": "^9.2.9",
     "@fluentui/react-dialog": "^9.5.1",
     "@fluentui/react-divider": "^9.2.8",
-    "@fluentui/react-field": "9.0.0-beta.2",
+    "@fluentui/react-field": "9.0.0",
     "@fluentui/react-image": "^9.1.5",
     "@fluentui/react-infobutton": "9.0.0-beta.26",
     "@fluentui/react-input": "^9.4.9",
