--- a/packages/react-components/react-field/package.json
+++ b/packages/react-components/react-field/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fluentui/react-field",
-  "version": "9.0.0-beta.2",
+  "version": "9.0.0",
   "description": "Fluent UI Field components",
   "main": "lib-commonjs/index.js",
   "module": "lib/index.js",
@@ -49,8 +49,7 @@
   "beachball": {
     "disallowedChangeTypes": [
       "major",
-      "minor",
-      "patch"
+      "prerelease"
     ]
   },
   "exports": {
