--- a/packages/react-components/react-select/package.json
+++ b/packages/react-components/react-select/package.json
@@ -32,7 +32,7 @@
     "@fluentui/scripts-tasks": "*"
   },
   "dependencies": {
-    "@fluentui/react-field": "9.0.0-beta.2",
+    "@fluentui/react-field": "9.0.0",
     "@fluentui/react-icons": "^2.0.196",
     "@fluentui/react-shared-contexts": "^9.3.3",
     "@fluentui/react-theme": "^9.1.7",
