--- a/packages/react-components/react-breadcrumb/package.json
+++ b/packages/react-components/react-breadcrumb/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@fluentui/react-button": "^9.3.8",
     "@fluentui/react-icons": "^2.0.196",
+    "@fluentui/react-link": "^9.0.34",
     "@fluentui/react-shared-contexts": "^9.3.3",
     "@fluentui/react-theme": "^9.1.7",
     "@fluentui/react-utilities": "^9.7.4",
