--- a/packages/react-components/react-dialog/package.json
+++ b/packages/react-components/react-dialog/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@griffel/react": "^1.5.2",
     "@fluentui/react-utilities": "^9.7.4",
+    "@fluentui/react-jsx-runtime": "^9.0.0-alpha.0",
     "@fluentui/keyboard-keys": "^9.0.2",
     "@fluentui/react-context-selector": "^9.1.17",
     "@fluentui/react-shared-contexts": "^9.3.3",
