chore(react-data-grid-react-window): adopt custom JSX pragma (#27552)

--- a/packages/react-components/react-data-grid-react-window/package.json
+++ b/packages/react-components/react-data-grid-react-window/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@fluentui/react-table": "^9.2.5",
     "@fluentui/react-utilities": "^9.7.4",
+    "@fluentui/react-jsx-runtime": "^9.0.0-alpha.0",
     "@swc/helpers": "^0.4.14",
     "react-window": "^1.8.6"
   },
