--- a/packages/react-components/react-dialog/package.json
+++ b/packages/react-components/react-dialog/package.json
@@ -37,7 +37,7 @@
   "dependencies": {
     "@griffel/react": "^1.5.2",
     "@fluentui/react-utilities": "^9.8.0",
-    "@fluentui/react-jsx-runtime": "^9.0.0-alpha.1",
+    "@fluentui/react-jsx-runtime": "9.0.0-alpha.1",
     "@fluentui/keyboard-keys": "^9.0.2",
     "@fluentui/react-context-selector": "^9.1.18",
     "@fluentui/react-shared-contexts": "^9.3.3",
