--- a/packages/react-components/react-migration-v0-v9/package.json
+++ b/packages/react-components/react-migration-v0-v9/package.json
@@ -36,6 +36,7 @@
     "@fluentui/react-icons": "^2.0.196",
     "@fluentui/react-theme": "^9.1.7",
     "@fluentui/react-utilities": "^9.8.0",
+    "@fluentui/react-jsx-runtime": "9.0.0-alpha.1",
     "@griffel/react": "^1.5.2",
     "@fluentui/react-components": "^9.19.0",
     "@fluentui/react-northstar": "^0.66.4",
