chore(react-text): adopt custom JSX pragma (#27626)

--- a/packages/react-components/react-text/package.json
+++ b/packages/react-components/react-text/package.json
@@ -36,6 +36,7 @@
     "@fluentui/react-theme": "^9.1.7",
     "@griffel/react": "^1.5.2",
     "@fluentui/react-utilities": "^9.8.0",
+    "@fluentui/react-jsx-runtime": "9.0.0-alpha.1",
     "@swc/helpers": "^0.4.14"
   },
   "peerDependencies": {
