--- a/packages/react-components/react-datepicker-compat/package.json
+++ b/packages/react-components/react-datepicker-compat/package.json
@@ -34,16 +34,16 @@
     "@fluentui/scripts-tasks": "*"
   },
   "dependencies": {
-    "@fluentui/react-theme": "^9.1.7",
-    "@fluentui/react-utilities": "^9.8.0",
     "@fluentui/keyboard-keys": "^9.0.2",
-    "@fluentui/react-field": "^9.1.0",
     "@fluentui/react-icons": "^2.0.196",
+    "@fluentui/react-input": "^9.4.10",
+    "@fluentui/react-popover": "^9.5.9",
+    "@fluentui/react-portal": "^9.2.6",
+    "@fluentui/react-positioning": "^9.5.10",
     "@fluentui/react-shared-contexts": "^9.3.3",
     "@fluentui/react-tabster": "^9.6.5",
-    "@fluentui/react-popover": "^9.5.9",
-    "@fluentui/react-positioning": "^9.5.10",
-    "@fluentui/react-input": "^9.4.10",
+    "@fluentui/react-theme": "^9.1.7",
+    "@fluentui/react-utilities": "^9.8.0",
     "@griffel/react": "^1.5.2",
     "@swc/helpers": "^0.4.14"
   },
