chore(react-label): adopt custom JSX pragma (#27616)

--- a/packages/react-components/react-label/package.json
+++ b/packages/react-components/react-label/package.json
@@ -35,6 +35,7 @@
     "@fluentui/react-shared-contexts": "^9.3.3",
     "@fluentui/react-theme": "^9.1.7",
     "@fluentui/react-utilities": "^9.8.0",
+    "@fluentui/react-jsx-runtime": "9.0.0-alpha.1",
     "@griffel/react": "^1.5.2",
     "@swc/helpers": "^0.4.14"
   },
