chore(react-link): adopt custom JSX pragma (#27620)

--- a/packages/react-components/react-link/package.json
+++ b/packages/react-components/react-link/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@fluentui/keyboard-keys": "^9.0.2",
+    "@fluentui/react-jsx-runtime": "9.0.0-alpha.1",
     "@fluentui/react-tabster": "^9.6.5",
     "@fluentui/react-theme": "^9.1.7",
     "@fluentui/react-utilities": "^9.8.0",
