--- a/packages/react-components/react-radio/package.json
+++ b/packages/react-components/react-radio/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@fluentui/react-field": "^9.1.0",
     "@fluentui/react-icons": "^2.0.196",
+    "@fluentui/react-jsx-runtime": "9.0.0-alpha.1",
     "@fluentui/react-label": "^9.1.9",
     "@fluentui/react-shared-contexts": "^9.3.3",
     "@fluentui/react-tabster": "^9.6.5",
