--- a/packages/react-components/react-datepicker-compat/package.json
+++ b/packages/react-components/react-datepicker-compat/package.json
@@ -37,6 +37,7 @@
     "@fluentui/keyboard-keys": "^9.0.2",
     "@fluentui/react-icons": "^2.0.196",
     "@fluentui/react-input": "^9.4.10",
+    "@fluentui/react-jsx-runtime": "9.0.0-alpha.1",
     "@fluentui/react-popover": "^9.5.9",
     "@fluentui/react-portal": "^9.2.6",
     "@fluentui/react-positioning": "^9.5.10",
