chore(react-tooltip): adopt custom JSX pragma (#27630)

--- a/packages/react-components/react-tooltip/package.json
+++ b/packages/react-components/react-tooltip/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@fluentui/keyboard-keys": "^9.0.2",
+    "@fluentui/react-jsx-runtime": "9.0.0-alpha.1",
     "@fluentui/react-portal": "^9.2.6",
     "@fluentui/react-positioning": "^9.5.10",
     "@fluentui/react-shared-contexts": "^9.3.3",
