--- a/packages/react-components/react-input/package.json
+++ b/packages/react-components/react-input/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@fluentui/react-field": "^9.1.0",
+    "@fluentui/react-jsx-runtime": "9.0.0-alpha.1",
     "@fluentui/react-shared-contexts": "^9.3.3",
     "@fluentui/react-theme": "^9.1.7",
     "@fluentui/react-utilities": "^9.8.0",
