--- a/packages/react-components/react-spinbutton/package.json
+++ b/packages/react-components/react-spinbutton/package.json
@@ -37,6 +37,7 @@
     "@fluentui/keyboard-keys": "^9.0.2",
     "@fluentui/react-field": "^9.1.0",
     "@fluentui/react-icons": "^2.0.196",
+    "@fluentui/react-jsx-runtime": "9.0.0-alpha.1",
     "@fluentui/react-shared-contexts": "^9.3.3",
     "@fluentui/react-theme": "^9.1.7",
     "@fluentui/react-utilities": "^9.8.0",
