--- a/packages/react-components/react-virtualizer/package.json
+++ b/packages/react-components/react-virtualizer/package.json
@@ -31,6 +31,7 @@
     "@fluentui/scripts-tasks": "*"
   },
   "dependencies": {
+    "@fluentui/react-jsx-runtime": "9.0.0-alpha.1",
     "@fluentui/react-utilities": "^9.8.0",
     "@griffel/react": "^1.5.2",
     "@swc/helpers": "^0.4.14"
