--- a/packages/react-components/react-datepicker-compat/package.json
+++ b/packages/react-components/react-datepicker-compat/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@fluentui/keyboard-keys": "^9.0.2",
+    "@fluentui/react-field": "^9.1.0",
     "@fluentui/react-icons": "^2.0.196",
     "@fluentui/react-input": "^9.4.10",
     "@fluentui/react-jsx-runtime": "9.0.0-alpha.1",
