chore(v0): enable emit only dts and use new conformance test API to narrow down TS Program (#27686)
* chore(v0): emit dts only for v0 which uses babel for transpilation

* test(react-norhtstar): use new conformance api to narrow down ts program to speed up tests

* feat(scripts-jest): clear and restore mocks automatically to prevent accidental test leaks

* test(react-northstar): scope fake timers usage

--- a/packages/fluentui/e2e/tsconfig.json
+++ b/packages/fluentui/e2e/tsconfig.json
@@ -3,9 +3,10 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "isolatedModules": false,
+    "noEmit": true,
+    "emitDeclarationOnly": false,
     "module": "esnext",
-    "types": ["node", "webpack-env", "cypress", "cypress-real-events"],
-    "skipLibCheck": true
+    "types": ["node", "webpack-env", "cypress", "cypress-real-events"]
   },
   "include": ["."]
 }
