--- a/packages/fluentui/perf/tsconfig.json
+++ b/packages/fluentui/perf/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../../tsconfig.base.v0.json",
   "compilerOptions": {
     "noEmit": true,
+    "emitDeclarationOnly": false,
     "module": "esnext",
     "types": ["node", "webpack-env"]
   },
