--- a/packages/fluentui/react-northstar/tsconfig.json
+++ b/packages/fluentui/react-northstar/tsconfig.json
@@ -3,13 +3,10 @@
   "compilerOptions": {
     "composite": true,
     "outDir": "dist/dts",
-    "skipLibCheck": true,
     "types": ["node", "jest", "@testing-library/jest-dom"],
     "paths": {
-      "docs/*": ["packages/fluentui/docs/*"],
       "src/*": ["packages/fluentui/react-northstar/src/*"],
-      "test/*": ["packages/fluentui/react-northstar/test/*"],
-      "@fluentui/a11y-testing": ["packages/a11y-testing/src/index"]
+      "test/*": ["packages/fluentui/react-northstar/test/*"]
     }
   },
   "include": ["src", "test"],
