--- a/tsconfig.base.v0.json
+++ b/tsconfig.base.v0.json
@@ -7,6 +7,7 @@
     "jsx": "react",
     "isolatedModules": true,
     "moduleResolution": "node",
+    "emitDeclarationOnly": true,
     "pretty": true,
     "allowJs": false,
     "noImplicitReturns": true,
