chore: enable TS intellisense in cross library projects for better/consistent DX (#26605)
* generate change files

* chore(public-docsite-v9): enable whole monorepo TS path aliases for improved DX

* chore(public-docsite-v9): migrate to solution config and type-check .storybook as well

* chore(react-migration-v8-v9): enable cross project  TS path aliases for improved DX

* chore(react-migration-v0-v9): enable cross project  TS path aliases for improved DX

* feat(scripts-tasks): enable ts processing on projects with path aliases used only for DX

* fix(typings): make transformSource optional in sb addons type extensions

* chore: use tsconfig.base.all.json directly for TS path webpack plugin instead of createPathAliasesConfig()

* feat(scripts-storybook): make createPathAliasesConfigconfigurable and return resulted merge as well

* feat(scripts-generators): update tsconfig.base.all.json after creating new package

* feat(scripts-generators): incorporate base all generation to create-package and validate integrity on CI

* chore: update tsconfig.base.all after rebase

* feat(scripts-tasks): implement type-check alias, update generate-api, refactor getTsPathAliasesConfig

* chore: use new type-check task for cross project TS path aliases + enable type-check for v9 docs

* fix(scripts-tasks): dont invoke api-extractor logic on every just-script call

* scaffold tsconfig-base-all generator

* feat(tools): implement tsconfig-base-all generator

* refactor(ci): use nx workspace generator for tsconfib.base.all.json check

--- a/apps/public-docsite-v9/tsconfig.json
+++ b/apps/public-docsite-v9/tsconfig.json
@@ -1,21 +1,23 @@
 {
+  "extends": "../../tsconfig.base.all.json",
   "compilerOptions": {
-    "target": "es5",
-    "outDir": "lib",
-    "module": "commonjs",
-    "jsx": "react",
-    "declaration": true,
-    "sourceMap": true,
+    "module": "ESNext",
+    "target": "ES2019",
     "noEmit": true,
     "experimentalDecorators": true,
     "noUnusedLocals": true,
-    "forceConsistentCasingInFileNames": true,
     "strictNullChecks": true,
     "noImplicitAny": true,
-    "moduleResolution": "node",
-    "preserveConstEnums": true,
-    "skipLibCheck": true,
-    "types": ["webpack-env", "@storybook/react"]
+    "types": ["webpack-env"]
   },
-  "include": ["src"]
+  "include": [],
+  "files": [],
+  "references": [
+    {
+      "path": "./tsconfig.app.json"
+    },
+    {
+      "path": "./.storybook/tsconfig.json"
+    }
+  ]
 }
