--- a/packages/react-components/react-migration-v0-v9/tsconfig.json
+++ b/packages/react-components/react-migration-v0-v9/tsconfig.json
@@ -1,6 +1,7 @@
 {
-  "extends": "../../../tsconfig.base.json",
+  "extends": "../../../tsconfig.base.all.json",
   "compilerOptions": {
+    "strict": true,
     "target": "ES2019",
     "noEmit": true,
     "isolatedModules": true,
