--- a/packages/react-monaco-editor/package.json
+++ b/packages/react-monaco-editor/package.json
@@ -35,6 +35,7 @@
     "@fluentui/example-data": "^8.4.7",
     "@fluentui/monaco-editor": "^1.3.6",
     "@fluentui/react-hooks": "^8.6.20",
+    "@fluentui/react-charting": "^5.16.22",
     "raw-loader": "4.0.2",
     "react-syntax-highlighter": "^10.1.3",
     "tslib": "^2.1.0"
