Add DraggableZone into export map (#27569)
* Add DraggableZone into export map

* Update change/@fluentui-react-3469d3b8-ceaa-47ad-af92-c5e1db22d1e0.json

Co-authored-by: Makoto Morimoto <Humberto.Morimoto@microsoft.com>

---------

Co-authored-by: Makoto Morimoto <humbertomakotomorimoto@gmail.com>
Co-authored-by: Makoto Morimoto <Humberto.Morimoto@microsoft.com>

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -430,6 +430,11 @@
       "import": "./lib/DragDrop.js",
       "require": "./lib-commonjs/DragDrop.js"
     },
+    "./lib/DraggableZone": {
+      "types": "./lib/DraggableZone.d.ts",
+      "import": "./lib/DraggableZone.js",
+      "require": "./lib-commonjs/DraggableZone.js"
+    },
     "./lib/Dropdown": {
       "types": "./lib/Dropdown.d.ts",
       "import": "./lib/Dropdown.js",
@@ -1150,6 +1155,10 @@
     "./lib-commonjs/DragDrop": {
       "types": "./lib-commonjs/DragDrop.d.ts",
       "require": "./lib-commonjs/DragDrop.js"
+    },
+    "./lib-commonjs/DraggableZone": {
+      "types": "./lib-commonjs/DraggableZone.d.ts",
+      "require": "./lib-commonjs/DraggableZone.js"
     },
     "./lib-commonjs/Dropdown": {
       "types": "./lib-commonjs/Dropdown.d.ts",
