Component testing - Donut chart (#27033)
* Donut chart component testing

* Resolving PR comments

* Rearranged and modified tests and test plan

* Converting component test plan to a table

* Removing setup change for extend-expect

* Changing the setup for jest-dom in config

--- a/packages/react-charting/package.json
+++ b/packages/react-charting/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@fluentui/react-focus": "^8.8.21",
+    "@fluentui/theme-samples": "^8.7.70",
     "@microsoft/load-themed-styles": "^1.10.26",
     "@types/d3-array": "1.2.1",
     "@types/d3-axis": "1.0.10",
