--- a/package.json
+++ b/package.json
@@ -174,6 +174,7 @@
     "@types/react-dom": "17.0.15",
     "@types/react-is": "17.0.3",
     "@types/react-test-renderer": "17.0.2",
+    "@types/react-transition-group": "4.4.6",
     "@types/request-promise-native": "1.0.18",
     "@types/scheduler": "0.16.2",
     "@types/semver": "^6.2.0",
