chore: add test-ssr to buildci script (#27899)

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "lage build --verbose",
     "build:codesandbox": "yarn build --to @fluentui/react --to @fluentui/react-components",
     "build:fluentui:docs": "gulp build:docs",
-    "buildci": "lage build test lint type-check --verbose",
+    "buildci": "lage build test lint type-check test-ssr --verbose",
     "builddemo": "yarn build --to public-docsite-resources",
     "buildto": "lage build --verbose --to",
     "buildto:lerna": "node ./scripts/executors/buildTo.js",
