--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,8 +63,8 @@ jobs:
           DANGER_GITHUB_API_TOKEN: $(DANGER_GITHUB_API_TOKEN)
 
       - script: |
-          yarn buildci  $(sinceArg)
-        displayName: build, test, lint
+          yarn buildci $(sinceArg)
+        displayName: build, test, lint, test-ssr
 
       - template: .devops/templates/cleanup.yml
 
