feat(react-tags): add dismiss handling on TagGroup (#27862)
* Revert "remove dismiss change"

This reverts commit cfbc28a7204490eae164fa54d30ce7812264e334.

* type update

* remove items

* use value instead of id

* default dismissible

* api

* dismissedTagId to dismissedTagValue

* use resolveShorthand for dismiss button

* remove tenary

--- a/packages/react-components/react-tags/package.json
+++ b/packages/react-components/react-tags/package.json
@@ -34,6 +34,7 @@
     "@fluentui/scripts-tasks": "*"
   },
   "dependencies": {
+    "@fluentui/keyboard-keys": "^9.0.3",
     "@fluentui/react-aria": "^9.3.20",
     "@fluentui/react-avatar": "^9.5.2",
     "@fluentui/react-icons": "^2.0.196",
