Added focus to the Breadcrumb (#27742)
* Added focus to the Breadcrumb

---------

Co-authored-by: Sarah Higley <smhigley@users.noreply.github.com>

--- a/packages/react-components/react-breadcrumb/package.json
+++ b/packages/react-components/react-breadcrumb/package.json
@@ -37,6 +37,7 @@
     "@fluentui/react-icons": "^2.0.196",
     "@fluentui/react-link": "^9.0.39",
     "@fluentui/react-shared-contexts": "^9.4.0",
+    "@fluentui/react-tabster": "^9.7.2",
     "@fluentui/react-theme": "^9.1.8",
     "@fluentui/react-utilities": "^9.9.0",
     "@fluentui/react-jsx-runtime": "9.0.0-alpha.4",
