Implementation of Horizontal Bar Chart with Axis (#25964)
* Initial changes for horizontal bar chart

* Changes for Horizontal Bar Chart With Axis

* Changes for shifting the chart when hovered over truncated text

* Changes for shifting the chart on selecting the property

* Adding change file

* Fixing failure

* Fixing failure

* Updating snapshots

* Updating snapshots

* Updating doc information for new chart

* Resolving review comments

* Resolving review comments

* Fixing review comments

* Reverting unnecessary diff post merge

* Reverting unnecessary diff post merge

* Updating snapshots,fixing yarn.lock

* Fixing formatting issue

* Updating snapshots

* Resolving review comments

* Fixing build issue

* Fixing color palette issues

* Fixing color palette issues

* Resolving review comments

--- a/packages/react-charting/package.json
+++ b/packages/react-charting/package.json
@@ -33,7 +33,8 @@
     "@fluentui/jest-serializer-merge-styles": "^8.0.27",
     "@fluentui/scripts-jest": "*",
     "@fluentui/scripts-tasks": "*",
-    "@fluentui/scripts-webpack": "*"
+    "@fluentui/scripts-webpack": "*",
+    "jest-canvas-mock": "2.4.0"
   },
   "dependencies": {
     "@fluentui/react-focus": "^8.8.23",
