--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -237,6 +237,7 @@ packages/react-components/react-storybook-addon-codesandbox @microsoft/fluentui-
 packages/react-components/babel-preset-storybook-full-source @microsoft/fluentui-react-build
 packages/react-components/react-jsx-runtime @microsoft/teams-prg
 packages/react-components/react-toast @microsoft/teams-prg
+packages/react-components/react-search @microsoft/cxe-coastal
 # <%= NX-CODEOWNER-PLACEHOLDER %>
 
 ## Components
