--- a/packages/react-components/react-drawer/package.json
+++ b/packages/react-components/react-drawer/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@fluentui/react-drawer",
-  "version": "9.0.0-alpha.0",
-  "private": true,
+  "version": "9.0.0-beta.0",
   "description": "Drawer components for Fluent UI React",
   "main": "lib-commonjs/index.js",
   "module": "lib/index.js",
