chore: migrate from nx 13 to 15.6.3 (#27885)
* chore: migrate to nx 14

* chore: apply nx 14 migrations

* chore: update codeowners

* chore: migrate to nx 15.6.3

* chore: apply nx 15.6.3 migrations

* fix(tools): move inline templates that cause dep graph resolution issues to template files

* fix(scripts-generators): migrate away from deprecated nx interfaces to pass lint

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -49,6 +49,9 @@
 /.prettierignore @microsoft/fluentui-react-build
 /.nxignore @microsoft/fluentui-react-build
 /jest.preset.js @microsoft/fluentui-react-build
+/jest.preset.ts @microsoft/fluentui-react-build
+/jest.config.js @microsoft/fluentui-react-build
+/jest.config.ts @microsoft/fluentui-react-build
 /lerna.json @microsoft/fluentui-react-build
 /package.json @microsoft/fluentui-react-build
 /sizeauditor.json @microsoft/fluentui-react-build
