--- a/package.json
+++ b/package.json
@@ -66,23 +66,23 @@
     "@actions/core": "1.9.1",
     "@actions/github": "5.0.3",
     "@azure/data-tables": "13.0.0",
-    "@babel/core": "7.21.0",
-    "@babel/generator": "7.21.1",
-    "@babel/parser": "7.21.1",
+    "@babel/core": "7.21.8",
+    "@babel/generator": "7.21.5",
+    "@babel/parser": "7.21.8",
     "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/plugin-proposal-decorators": "7.21.0",
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.18.6",
     "@babel/plugin-proposal-optional-chaining": "7.21.0",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/plugin-syntax-object-rest-spread": "7.8.3",
-    "@babel/plugin-transform-runtime": "7.21.0",
-    "@babel/preset-env": "7.20.2",
+    "@babel/plugin-transform-runtime": "7.21.4",
+    "@babel/preset-env": "7.21.5",
     "@babel/preset-react": "7.18.6",
-    "@babel/preset-typescript": "7.18.6",
+    "@babel/preset-typescript": "7.21.5",
     "@babel/register": "7.21.0",
-    "@babel/standalone": "7.21.1",
-    "@babel/traverse": "7.21.2",
-    "@babel/types": "7.21.2",
+    "@babel/standalone": "7.21.8",
+    "@babel/traverse": "7.21.5",
+    "@babel/types": "7.21.5",
     "@cactuslab/usepubsub": "^1.0.2",
     "@ctrl/tinycolor": "3.3.4",
     "@cypress/react": "5.12.4",
@@ -100,12 +100,12 @@
     "@microsoft/eslint-plugin-sdl": "0.1.9",
     "@microsoft/load-themed-styles": "1.10.26",
     "@microsoft/loader-load-themed-styles": "2.0.17",
-    "@nrwl/cli": "13.10.6",
-    "@nrwl/devkit": "13.10.6",
-    "@nrwl/jest": "13.10.6",
-    "@nrwl/js": "13.10.6",
-    "@nrwl/node": "13.10.6",
-    "@nrwl/workspace": "13.10.6",
+    "@nrwl/cli": "15.6.3",
+    "@nrwl/devkit": "15.6.3",
+    "@nrwl/jest": "15.6.3",
+    "@nrwl/js": "15.6.3",
+    "@nrwl/node": "15.6.3",
+    "@nrwl/workspace": "15.6.3",
     "@octokit/rest": "18.12.0",
     "@storybook/addon-a11y": "6.5.15",
     "@storybook/addon-actions": "6.5.15",
@@ -142,6 +142,7 @@
     "@types/copy-webpack-plugin": "6.4.0",
     "@types/dedent": "0.7.0",
     "@types/doctrine": "0.0.5",
+    "@types/ejs": "3.1.2",
     "@types/enzyme": "3.10.7",
     "@types/eslint": "7.2.13",
     "@types/express": "4.17.15",
@@ -221,6 +222,7 @@
     "doctoc": "2.0.1",
     "doctrine": "3.0.0",
     "dotparser": "1.1.1",
+    "ejs": "3.1.9",
     "enquirer": "2.3.6",
     "enzyme": "3.10.0",
     "enzyme-to-json": "3.6.2",
@@ -282,7 +284,7 @@
     "node-fetch": "2.6.7",
     "node-plop": "0.25.0",
     "node-polyfill-webpack-plugin": "1.0.2",
-    "nx": "13.10.6",
+    "nx": "15.6.3",
     "p-queue": "6.6.2",
     "parse-diff": "0.7.1",
     "path-browserify": "1.0.1",
@@ -331,8 +333,8 @@
     "swc-loader": "0.2.3",
     "syncpack": "5.6.10",
     "tachometer": "0.7.0",
-    "terser": "5.14.2",
-    "terser-webpack-plugin": "5.3.1",
+    "terser": "5.17.4",
+    "terser-webpack-plugin": "5.3.9",
     "through2": "4.0.2",
     "tmp": "0.2.1",
     "ts-jest": "28.0.8",
@@ -344,7 +346,7 @@
     "typescript": "4.3.5",
     "vinyl": "2.2.0",
     "vrscreenshotdiff": "0.0.17",
-    "webpack": "5.74.0",
+    "webpack": "5.83.1",
     "webpack-bundle-analyzer": "4.4.2",
     "webpack-cli": "4.10.0",
     "webpack-dev-middleware": "4.2.0",
