--- a/tools/tsconfig.lib.json
+++ b/tools/tsconfig.lib.json
@@ -6,6 +6,6 @@
     "outDir": "../dist/out-tsc",
     "types": ["node"]
   },
-  "exclude": ["**/*.spec.ts", "**/*.test.ts"],
+  "exclude": ["**/*.spec.ts", "**/*.test.ts", "jest.config.ts"],
   "include": ["**/*.ts"]
 }
