--- a/tools/tsconfig.tools.json
+++ b/tools/tsconfig.tools.json
@@ -9,6 +9,6 @@
     "importHelpers": false,
     "downlevelIteration": true
   },
-  "exclude": ["**/*.spec.ts", "**/*.test.ts"],
+  "exclude": ["**/*.spec.ts", "**/*.test.ts", "jest.config.ts"],
   "include": ["**/*.ts"]
 }
