--- a/packages/react-components/theme-designer/.eslintrc.json
+++ b/packages/react-components/theme-designer/.eslintrc.json
@@ -1,4 +1,7 @@
 {
   "extends": ["plugin:@fluentui/eslint-plugin/react"],
-  "root": true
+  "root": true,
+  "rules": {
+    "@griffel/styles-file": "off"
+  }
 }
