feat(test-bundles): make the bundle-size flow generic to simplify local DX but most importantly CI (#28210)
* feat(test-bundles): make old bundle-size generic enough to simplify CI setup
* feat(test-bundles): replace jq cryptic script with custom merge script
* fix(test-bundles): rename npm script to not conflict with v9 bundle-size

--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "buildto": "lage build --verbose --to",
     "buildto:lerna": "node ./scripts/executors/buildTo.js",
     "bundle": "lage bundle --verbose",
-    "bundlesizecollect": "node ./scripts/generators/bundle-size-collect",
     "change": "beachball change --no-commit",
     "check:change": "beachball check",
     "check:modified-files": "node -r ./scripts/ts-node/register ./scripts/executors/check-for-modified-files",
@@ -287,6 +286,7 @@
     "node-polyfill-webpack-plugin": "1.0.2",
     "nx": "15.6.3",
     "p-queue": "6.6.2",
+    "parallel-webpack": "2.6.0",
     "parse-diff": "0.7.1",
     "path-browserify": "1.0.1",
     "plop": "2.6.0",
