fix(react-utilities): add compatibility with shadow DOM (#28307)

--- a/package.json
+++ b/package.json
@@ -97,10 +97,10 @@
     "@mdx-js/loader": "1.6.22",
     "@microsoft/api-extractor": "7.31.2",
     "@microsoft/api-extractor-model": "7.24.2",
-    "@microsoft/tsdoc": "0.14.1",
     "@microsoft/eslint-plugin-sdl": "0.1.9",
     "@microsoft/load-themed-styles": "1.10.26",
     "@microsoft/loader-load-themed-styles": "2.0.17",
+    "@microsoft/tsdoc": "0.14.1",
     "@nrwl/cli": "15.6.3",
     "@nrwl/devkit": "15.6.3",
     "@nrwl/jest": "15.6.3",
@@ -305,6 +305,7 @@
     "react-dom": "17.0.2",
     "react-hot-loader": "4.13.0",
     "react-is": "17.0.2",
+    "react-shadow": "20.2.0",
     "react-test-renderer": "17.0.2",
     "react-vis": "1.11.7",
     "read-pkg-up": "7.0.1",
