feat(scripts-bundle-size-auditor): refactor test-bundles app into a generic CLI tool that enables faster CI  (#28231)
* feat(scripts-bundle-size-auditor): implement generic cli for old size-auditor as replacememnt for test-bundles app

* feat(scripts-bundle-size-auditor): add merging functionality to cli and --report-path arg per package

* chore(react-northstar): add bundle-size-auditor config to replace test-bundles

* ci(bundlesize): use new bundle-size-auditor setup for v0,v8

* chore: remove unnecessary test-bundles app which is now replaced by bundle-size-auditor cli

* chore: add bundle-size-auditor task dependency definition

* fix(scripts-bundle-size-auditor): update deps and fix ts errors

* feat(bundle-size-auditor): provide fallback behaviour if no reports were created

* chore: add owner for bundle-size-auditor

* chore(nx): add scripts-bundle-size-auditor to workspace.json

* feat(bundle-size-auditor): remove dependency on scripts-webpack and make webpack config creation more straightforward

* refactor(bundle-size-auditor): use options pattern for createWebpackConfig api

* feat(bundle-size-auditor): add transpileToEs5 option to createWebpackConfig to replace need of 'packageName' which doenst provide any context on caller site

* ci(bundlesize): be explicit about artifact name to make explicit where sizeauditor gathers metadata

* docs(bundle-size-auditor): add readme

* ci: update display name with more context for sizeauditor

* chore(scripts-generators): remoce bundle-size-collect scripts which is part of bundle-size-auditor cli

* test(bundle-size-auditor): add functionality coverage

* fix(scripts-bundle-size-auditor): resolve type-check issues

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -102,6 +102,7 @@ scripts/update-release-notes @microsoft/fluentui-react-build
 scripts/utils @microsoft/fluentui-react-build
 scripts/webpack @microsoft/fluentui-react-build
 scripts/perf-test-flamegrill @microsoft/fluentui-react-build
+scripts/bundle-size-auditor @microsoft/fluentui-react-build
 
 #### Fluent UI N*
 packages/a11y-rules @microsoft/fluentui-northstar
@@ -124,7 +125,6 @@ apps/vr-tests @microsoft/fluentui-react
 apps/vr-tests-react-components @microsoft/fluentui-react
 apps/ssr-tests @microsoft/fluentui-react
 apps/pr-deploy-site @microsoft/fluentui-react-build
-apps/test-bundles @microsoft/fluentui-react
 apps/public-docsite-v9 @microsoft/cxe-red @microsoft/cxe-coastal @microsoft/fluentui-react-build
 apps/theming-designer @microsoft/fluentui-react
 apps/ssr-tests-v9 @microsoft/fluentui-react-build
