feat: Configurable shortcut to focus most recent toast (#28289)
* feat: Implement shortcut to focus toasts

Implements a default shortcut `CTRL+M` that will focus on the most
recent toast.

While focus is inside the toaster, all timeouts of active toasts will be
paused. The toaster also attemps to restore focus on blur.

* publish PR storybook

* add docs

* fix snapshot

* improve focus restore

* fix build

* label

* remove default shortcut

* make shortcuts optional

* add notification centre guidance

* fix example

* add aria-describedby

* update snapshots

* be consistent - use ToastContainer

* change dispatchedAt to order

* update tabster version

* revert

* add ress review issues

* Add tests

* fix version mismatch

--- a/packages/react-components/react-toast/package.json
+++ b/packages/react-components/react-toast/package.json
@@ -41,6 +41,7 @@
     "@fluentui/react-jsx-runtime": "9.0.0-alpha.9",
     "@fluentui/react-portal": "^9.2.16",
     "@fluentui/react-shared-contexts": "^9.5.1",
+    "@fluentui/react-tabster": "^9.9.1",
     "@fluentui/react-theme": "^9.1.9",
     "@fluentui/react-utilities": "^9.10.0",
     "@griffel/react": "^1.5.7",
