feat(Link): Inverted background styles (#28341)
* feat(Link): Inverted background styles

Creates a new shared context `BackgroundAppearanceContext` which can be
used to override the `Link` component foreground colour to render
correctly on inverted background surfaces - i.e. colour tokens such as
`colorNeutralInvertedBackground`.

Fixes #28338

* changefile

* update md

* update types

* fix version mismatch

* add disabled tests

--- a/packages/react-components/react-link/package.json
+++ b/packages/react-components/react-link/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@fluentui/keyboard-keys": "^9.0.3",
     "@fluentui/react-jsx-runtime": "9.0.0-alpha.9",
+    "@fluentui/react-shared-contexts": "^9.5.1",
     "@fluentui/react-tabster": "^9.9.1",
     "@fluentui/react-theme": "^9.1.9",
     "@fluentui/react-utilities": "^9.10.0",
